# shovel

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  LICENSE.md  README.md  TODO.md  build.rs  rust-toolchain.toml  rustfmt.toml
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: commands.rs  main.rs  multi_progress.rs  run.rs  tracker.rs  util.rs
crates/cli/src/commands/: cache.rs  cat.rs  info.rs  list.rs  neco.rs  search.rs  update.rs
crates/cli/src/commands/bucket/: add.rs  list.rs  remove.rs  verify.rs
crates/cli/src/commands/cache/: remove.rs  show.rs
crates/powershell/: Cargo.toml
crates/powershell/src/: expression.rs  format.rs  lib.rs  runner.rs
crates/shovel/: Cargo.toml
crates/shovel/src/: bucket.rs  cache.rs  download.rs  error.rs  hook.rs  json.rs  lib.rs  persist.rs  shovel.rs  test.rs
crates/shovel/src/bucket/: bucket.rs  buckets.rs  criteria.rs  error.rs  name.rs
src/: app.rs  bucket.rs  cache.rs  cli.rs  config.rs  error.rs  hook.rs  json.rs  lib.rs  main.rs  manifest.rs  persist.rs  powershell.rs  result.rs  shovel.rs  test.rs  timestamp.rs  util.rs
src/app/: app.rs  apps.rs  macros.rs  manifest.rs  metadata.rs
src/bucket/: bucket.rs  buckets.rs  result.rs
src/cli/: bucket.rs  global.rs  run.rs
testdata/buckets/: refresh.py
