[package]
name = "shovel"
version = "0.4.0"
edition = "2021"
authors = ["Ong Yong Xin"]
description = "A package manager for Windows, based off of Scoop."

[dependencies]
chrono = "0.4.35" 
git2 = "0.18.2"
home = "0.5.9"
phf = { version = "0.11.2", features = ["macros"] }
regex = "1.10.3"
reqwest = "0.12.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_path_to_error = "0.1.16"
serde_with = "3.6.1"
thiserror = "1.0.57"
tempfile = "3.10.1"
tokio = { version = "1", features = ["full"] }
url = { version = "2.5.0", features = ["serde"] }

# CLI dependencies
bytesize = { version = "1.3.0", optional = true }
clap = { version = "4.5.1", features = ["derive"], optional = true }
color-eyre = { version = "0.6", optional = true }
eyre = { version = "0.6", default-features = false, features = ["auto-install", "track-caller"], optional = true }
jsonschema = { version = "0.17.1", optional = true }
linya = { version = "0.3.0", optional = true }
owo-colors = { version = "3.5.0", optional = true }
rayon = { version = "1.10.0", optional = true }
tabled = { version = "0.15.0", features = ["ansi"], optional = true }
terminal_size = { version = "0.3.0", optional = true }

[build-dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114", features = ["preserve_order"] }
phf_codegen = "0.11.2"

[features]
bin = [
  "dep:bytesize",
  "dep:clap",
  "dep:color-eyre",
  "dep:eyre",
  "dep:jsonschema",
  "dep:linya",
  "dep:owo-colors",
  "dep:rayon",
  "dep:tabled",
  "dep:terminal_size",
]

[[bin]]
name = "shovel"
required-features = ["bin"]

[profile.release]
debug = true
#lto = true
#codegen-units = 1
