[package]
name = "shovel-cli"
version = "0.1.0"
description = "A package manager for Windows, based off of Scoop."

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "shovel"
path = "src/main.rs"

[dependencies]
shovel.workspace = true

bytesize.workspace = true
clap.workspace = true
color-eyre.workspace = true
eyre.workspace = true
git2.workspace = true
indicatif.workspace = true
jsonschema.workspace = true
owo-colors.workspace = true
phf.workspace = true
rayon.workspace = true
regex.workspace = true
serde_json.workspace = true
tabled.workspace = true
terminal_size.workspace = true

[build-dependencies]
phf_codegen.workspace = true
serde_json.workspace = true

[lints]
workspace = true
